Upgraded Spring Batch libs to latest release to make the plugin  work with Grails 2.4.x Added SpringBatchUrlMappings for securing batch admin URLs. updated controllers and GSP to include mapping:'batch'  in all links.

--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 target
 target-eclipse
 plugin.xml
-/web-app
+web-app
 *.iml
 *.ipr
 *.iws
@@ -12,3 +12,5 @@ plugin.xml
 cobertura.ser
 .settings
 *.sha1
+.project
+.classpath
