--- a/application.properties
+++ b/application.properties
@@ -1,4 +1,4 @@
 #Grails Metadata file
-#Wed Jan 09 19:19:47 CST 2013
-app.grails.version=2.2.4
+#Sun Jun 29 17:14:02 PDT 2014
+app.grails.version=2.4.3
 app.name=spring-batch
