--- a/application.properties
+++ b/application.properties
@@ -1,4 +1,5 @@
 #Grails Metadata file
-#Wed Jan 09 19:19:47 CST 2013
-app.grails.version=2.2.4
+#Tue Nov 18 11:22:16 EST 2014
+app.grails.version=2.3.11
 app.name=spring-batch
+app.servlet.version=2.5
