--- a/test/projects/simple-schedule/.project
+++ b/test/projects/simple-schedule/.project
@@ -26,7 +26,7 @@
 		<link>
 			<name>.link_to_grails_plugins</name>
 			<type>2</type>
-			<locationURI>GRAILS_ROOT/2.2.4/projects/simple-schedule/plugins</locationURI>
+			<location>/data/allegro/code/infinum/workspace/grails-spring-batch/test/projects/simple-schedule/target/work/plugins</location>
 		</link>
 	</linkedResources>
 </projectDescription>
