--- a/test/projects/simple-schedule/application.properties
+++ b/test/projects/simple-schedule/application.properties
@@ -1,5 +1,6 @@
 #Grails Metadata file
-#Mon May 19 20:37:13 EDT 2014
-app.grails.version=2.2.4
+#Tue Nov 18 11:54:18 EST 2014
+app.grails.version=2.3.11
 app.name=simple-schedule
+app.servlet.version=2.5
 app.version=0.1
