--- a/test/projects/spring-batch-test/application.properties
+++ b/test/projects/spring-batch-test/application.properties
@@ -1,6 +1,6 @@
 #Grails Metadata file
-#Wed Apr 25 08:47:09 CDT 2012
-app.grails.version=2.2.4
+#Tue Nov 18 11:54:18 EST 2014
+app.grails.version=2.3.11
 app.name=spring-batch-test
 app.servlet.version=2.5
 app.version=0.1
