--- a/application.properties
+++ b/application.properties
@@ -1,5 +1,6 @@
 #Grails Metadata file
-#Tue Nov 18 11:22:16 EST 2014
-app.grails.version=2.5.0
+#Thu Feb 25 13:18:14 EST 2016
+app.grails.version=2.5.3
 app.name=spring-batch
 app.servlet.version=2.5
+plugins.tomcat=2.2.4
